# SEChat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: encrypt.c  encrypt.h  interface.c  interface.h  main.c  net.c  net.h  netio.c  netio.h  packet.c  packet.h  protocol.c  protocol.h  socketxp.h  terminalxp.h  util.c  util.h
src/unix/: socket.c  socket_unix.c  socket_unix.h  terminal.c
src/windows/: socket.c  socket_win.c  socket_win.h  terminal.c
